# Agenticworkflow

./: OPTICLAW_BLUEPRINT.md  README.md  pyproject.toml
src/opticlaw/: __init__.py  __main__.py
src/opticlaw/connectors/: base.py  email.py  shell.py
src/opticlaw/core/: policy.py  types.py
src/opticlaw/runtime/: app.py  event_bus.py  router.py
src/opticlaw/services/: llm.py  memory.py  model_router.py  orchestrator.py  planner.py  triage.py
tests/: test_app.py  test_event_bus.py
